tests/ui/resolve/issue-16058.stderr
error[E0574]: expected struct, variant or union type, found enum `Result`
  --> $DIR/issue-16058.rs:10:9
   |
LL |         Result {
   |         ^^^^^^ not a struct, variant or union type
   |
help: consider importing one of these type aliases instead
   |
LL + use std::fmt::Result;
   |
LL + use std::io::Result;
   |
LL + use std::thread::Result;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0574`.
